# Scout

./: .gitignore  .mcp.json.example  AGENTS.MD  CLAUDE.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  STATUS.md  TESTING.md  benchmark_hybrid_search.py  benchmark_models.py  demo.py  index_all_zendesk.py  pyproject.toml  reindex_all_with_dependencies.py  reindex_zendesk_monolith.py  requirements.txt  setup.sh  setup_mcp.sh  test_chunker.py  test_monolith.py  test_real_repo.py
.beads/: README.md  issues.jsonl
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  TROUBLESHOOTING.md
examples/: README.md  demo.py  index_all_zendesk.py  reindex_all_with_dependencies.py  reindex_zendesk_monolith.py  test_monolith.py  test_real_repo.py
mcp_index_data/: chroma.sqlite3
src/mcpindexer/: __init__.py  __main__.py  chunker.py  cli.py  dependency_analyzer.py  dependency_storage.py  embeddings.py  indexer.py  keyword_search.py  parser.py  server.py  stack_config.py
src/scout/: __init__.py  __main__.py  chunker.py  cli.py  dependency_analyzer.py  dependency_storage.py  embeddings.py  indexer.py  server.py  stack_config.py
tests/: __init__.py  test_chunker.py  test_dependencies.py  test_dependency_analyzer.py  test_embeddings.py  test_incremental_reindex.py  test_indexer.py  test_parser.py  test_server.py  test_stack_config.py
